--- a/labeling_interface/aesthetics_labeling/templates/comparison.html
+++ b/labeling_interface/aesthetics_labeling/templates/comparison.html
@@ -26,29 +26,23 @@
     	</div>
     	<div class="row">
     		<div class="column">
-    			<button type="button" class="center" id='left_button' onclick="submitForm({{Comparison.A_BETTER}});">Left (press a)</button>
+    			<button type="button" class="center" id='left_button' onclick="submitForm({{ComparisonAssignment.A_BETTER}});">Left (press a)</button>
     		</div>
     		<div class="column">
-    			<button type="button" class="center" id='right_button' onclick="submitForm({{Comparison.B_BETTER}});">Right(press b)</button>
+    			<button type="button" class="center" id='right_button' onclick="submitForm({{ComparisonAssignment.B_BETTER}});">Right(press b)</button>
     		</div>
     	</div>
     	<div class="row">
     		<div class="column">
-    			<button type="button" class="center" id='similar_button' onclick="submitForm({{Comparison.SIMILAR_GOOD}});">I enjoy both of these images (press s)</button>
+    			<button type="button" class="center" id='similar_button' onclick="submitForm({{ComparisonAssignment.SIMILAR_GOOD}});">I enjoy both of these images (press s)</button>
     		</div>
             <div class="column">
-                <button type="button" class="center" id='similar_button' onclick="submitForm({{Comparison.SIMILAR_BAD}});">I do not enjoy either of these images (press d)</button>
+                <button type="button" class="center" id='similar_button' onclick="submitForm({{ComparisonAssignment.SIMILAR_BAD}});">I do not enjoy either of these images (press d)</button>
             </div>
     		<div class="column">
-    			<button type="button" class="center" id='different_button' onclick="submitForm({{Comparison.DIFFERENT}});">These images are too different (press f)</button>
+    			<button type="button" class="center" id='different_button' onclick="submitForm({{ComparisonAssignment.DIFFERENT}});">These images are too different (press f)</button>
     		</div>
     		</div>
-    	</div>
-        <div class="row">
-            <p>To what extent do these images have different (left) or similar (right) style?</p>
-            <div class="slidecontainer">
-              <input type="range" min="1" max="100" value="50" class="slider" name="similarity">
-            </div>
         <input type="hidden" id="comparison_result" name="comparison_result" value="0">
     </form>
 </body>
