--- a/labeling_interface/aesthetics_labeling/templates/aesthetics_labeling_homepage_default.html
+++ b/labeling_interface/aesthetics_labeling/templates/aesthetics_labeling_homepage_default.html
@@ -1,5 +1,12 @@
-<p>Welcome to the Computational Aesthetics Labeling Interface!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
 
-<p><a href="/~sgoree/django.cgi/aesthetics_labeling/demographics">Start Survey</a></p>
+<div class="col-sm-12 col-md-8 col-lg-6">
+<div class="row">
+  <div class="card small">
+    <p>Welcome to the Computational Aesthetics Labeling Interface!</p>
 
-<p><a href="/~sgoree/django.cgi/accounts/login">Login and Continue</a></p>
+
+<p><a href="/~sgoree/django.cgi/accounts/login">Login and Start Survey</a></p>
+  </div>
+</div>
+</div>
