--- a/labeling_interface/aesthetics_labeling/templates/comparison.html
+++ b/labeling_interface/aesthetics_labeling/templates/comparison.html
@@ -1,13 +1,61 @@
-{% load static %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
 
 <head>
-	<link rel="stylesheet" href="{% static 'css/comparison.css' %}">
-	<script src="{% static 'js/comparison.js' %}"></script> 
+<style>
+.center {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img.center {
+  max-height: 500px;
+  max-width: 100%;
+}
+
+.row {
+  display: flex;
+  margin-bottom: 1px;
+}
+
+.column {
+  flex: 50%;
+  text-align: center;
+}
+.half-column {
+  flex: 25%;
+  text-align: center;
+}
+</style>
+<script>
+function submitForm(code){
+    console.log(code);
+    document.getElementById("comparison_result").value = code;
+    document.getElementById("main_form").submit();
+}
+
+document.addEventListener('keydown', function(event) {
+ if(event.key === 'a'){
+    document.getElementById("left_button").style.background='#949494';
+    submitForm(1);
+ }else if(event.key === 'b'){
+    document.getElementById("right_button").style.background='#949494';
+    submitForm(2);
+ }else if(event.key === 's'){
+    document.getElementById("similar_good_button").style.background='#949494';
+    submitForm(3);
+ }else if(event.key === 'd'){
+    document.getElementById("similar_bad_button").style.background='#949494';
+    submitForm(4);
+ }else if(event.key === 'f'){
+    document.getElementById("different_button").style.background='#949494';
+    submitForm(5);
+ }
+});
+</script> 
 </head>
 <body>
-	<p>Welcome to Sam's Computational Aesthetics Labeling Interface!</p>
-
-	<p>Progress: {{n_completed}}/{{n_total}} --- {{percentage}}%. Choose which image you enjoy more, or another option if it is difficult to decide.</p>
+    <p>Progress: {{n_completed}}/{{n_total}} --- {{percentage}}% Choose which image you enjoy more, or another option if it is difficult to decide.</p>
 
     <form id="main_form" method="post">
         {% csrf_token %}
@@ -15,34 +63,44 @@
     		<div class="column">
                 {% load static %}
     			<img class="center" src="{{image_a_path}}"/>
-    			<p>Image A:</p>
-                <input type="checkbox" name="image_a_broken" value="image_a_broken">Broken<br>
+                
     		</div>
     		<div class="column">
     			<img class="center" src="{{image_b_path}}"/>
-    			<p>Image B:</p>
-                <input type="checkbox" name="image_a_broken" value="image_a_broken">Broken<br>
+                
     		</div>
     	</div>
     	<div class="row">
     		<div class="column">
-    			<button type="button" class="center" id='left_button' onclick="submitForm({{ComparisonAssignment.A_BETTER}});">Left (press a)</button>
+    			<button type="button" class="center" id='left_button' onclick="document.getElementById('left_button').style.background='#949494';submitForm({{ComparisonAssignment.A_BETTER}});">Left (press a)</button>
     		</div>
     		<div class="column">
-    			<button type="button" class="center" id='right_button' onclick="submitForm({{ComparisonAssignment.B_BETTER}});">Right(press b)</button>
+    			<button type="button" class="center" id='right_button' onclick="document.getElementById('right_button').style.background='#949494';submitForm({{ComparisonAssignment.B_BETTER}});">Right(press b)</button>
     		</div>
     	</div>
     	<div class="row">
-    		<div class="column">
-    			<button type="button" class="center" id='similar_button' onclick="submitForm({{ComparisonAssignment.SIMILAR_GOOD}});">I enjoy both of these images (press s)</button>
+    		<div class="half-column">
+    			<button type="button" class="center" id='similar_good_button' onclick="document.getElementById('similar_good_button').style.background='#949494';submitForm({{ComparisonAssignment.SIMILAR_GOOD}});">I enjoy both of these images (press s)</button>
     		</div>
             <div class="column">
-                <button type="button" class="center" id='similar_button' onclick="submitForm({{ComparisonAssignment.SIMILAR_BAD}});">I do not enjoy either of these images (press d)</button>
+                <button type="button" class="center" id='similar_bad_button' onclick="document.getElementById('similar_bad_button').style.background='#949494';submitForm({{ComparisonAssignment.SIMILAR_BAD}});">I do not enjoy either of these images (press d)</button>
             </div>
-    		<div class="column">
-    			<button type="button" class="center" id='different_button' onclick="submitForm({{ComparisonAssignment.DIFFERENT}});">These images are too different (press f)</button>
+    		<div class="half-column">
+    			<button type="button" class="center" id='different_button' onclick="document.getElementById('different_button').style.background='#949494';submitForm({{ComparisonAssignment.DIFFERENT}});">These images are too different (press f)</button>
     		</div>
-    		</div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <input type="checkbox" name="image_a_broken" value="image_a_broken">Report the left image as inappropriate or not loading.<br>
+            </div>
+            <div class="column">
+                <input type="checkbox" name="image_b_broken" value="image_b_broken">Report the right image as inappropriate or not loading.<br>
+            </div>
+        </div>
         <input type="hidden" id="comparison_result" name="comparison_result" value="0">
     </form>
+    <p>If it is difficult to decide because you enjoy both images equally, choose "I enjoy both of these images." If it is difficult to decide because you do not enjoy either, choose "I do not enjoy either of these images." If the images are really just too different to compare, choose "These images are too different". You can decide for yourself what "enjoy" means.</p>
+    <p>If you get tired, feel free to leave and come back later! You can login again using the same email and password and pick up where you left off. The study will close within a few weeks, though, so come back soon.</p>
+    <p>Tip 1: To speed things along, use the keyboard shortcuts "a" "s" "d" "f" and "b"! When I use these, I place my left hand over the five keys </p>
+    <p>Tip 2: If you regret one of your choices, hitting the back button in your browser will allow you to change your answer for a previous question.</p>
 </body>
